--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qlcplus (4.12.4) stable; urgency=low
   * engine: add "acts on" property to channels (thanks to Michał Kluska)
   * Virtual Console/Button: fix submaster not affecting a Chaser startup intensity
   * Plugins/E1.31: make CID unique on each network interface
+  * Web Access: added -wp/-web-port command line option to set a specific access port
   * Input profiles: added Novation Launchpad Mini MK3 (thanks to Felix)
   * Input profiles: added KORG nanoKONTROL Studio (thanks to Hans-Jürgen Tappe)
   * RGB scripts: added 'Snow or bubbles' and 'Blinder' scripts (thanks to Hans-Jürgen Tappe)
