--- a/debian/changelog
+++ b/debian/changelog
@@ -22,7 +22,9 @@ qlcplus (4.12.4) stable; urgency=low
   * New fixtures: Contest SFX-HO150QC, Contest SFX-HO150W, Elation OPTI-TRI-30, GLP Impression X4 Bar 10 (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
   * New fixtures: GLP Impression FR1 TM, JB Systems Challenger BSW, Pro-Lights EVO90F, RVE Sereniled EVO2 (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
   * New fixtures: RVE Sereniled Plus, RVE Twinled EVO2, Robe Robin Spikie, Robe Robin Tetra 1 (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
-  * New fixtures: Robe Robin Tetra 2, Showtec Par 64 100W COB UV, Talent SSL1 (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
+  * New fixtures: Robe Robin Tetra 2, Showtec Par 64 100W COB UV, Talent SSL1, Briteq BTX-Saturn (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
+  * New fixtures: Chauvet Maverick MK3 Profile CX, Coemar LEDko FullSpectrum 6, Elation Proteus Hybrid (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
+  * New fixtures: Eurolite LED TMH-X10, Futurelight EYE-7.i (thanks to Michał Kluska, Joshua Urieli, Claudia Dunkel)
   * New fixture: Cameo Zenit Z120 G2 (thanks to jeremyAMMD)
   * New fixture: Chauvet GigBAR Flex (thanks to bigredthelogger)
   * New fixture: Chauvet SlimSTRIP UV-18 IRC (thanks to DJ Kozz)
