--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 qlcplus (4.12.5) stable; urgency=low
 
+  * UI/RGB Matrix Editor: fix dumping on a Sequence
   * Virtual Console/Slider: fix crash when controlling non existing channels
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
