--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.12.5) stable; urgency=low
 
   * UI/RGB Matrix Editor: fix dumping on a Sequence
   * Virtual Console/Slider: fix crash when controlling non existing channels
+  * Virtual Console/XY Pad: fix layout (thanks to Hans-Jürgen Tappe)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
