--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ qlcplus (4.12.5) stable; urgency=low
   * Virtual Console/Slider: fix crash when controlling non existing channels
   * Virtual Console/XY Pad: fix layout (thanks to Hans-Jürgen Tappe)
   * Virtual Console: fix copy of widgets background picture
+  * Plugins: save IO lines by name and not by index (where possible)
+  * Plugins/DMS USB: add support for COM485-PLUS2 product (thanks to David Turner)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
