--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,8 @@ qlcplus (4.12.5) stable; urgency=low
   * Virtual Console/XY Pad: fix layout (thanks to Hans-Jürgen Tappe)
   * Virtual Console: fix copy of widgets background picture
   * Plugins: save IO lines by name and not by index (where possible)
-  * Plugins/DMS USB: add support for COM485-PLUS2 product (thanks to David Turner)
+  * Plugins/DMX USB: add support for COM485-PLUS2 product (thanks to David Turner)
+  * Plugins/E1.31: ignore non DMX packets in input
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
