--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 qlcplus (4.12.5) stable; urgency=low
 
+  * engine: add support for Scene pausing
   * UI/RGB Matrix Editor: fix dumping on a Sequence
   * UI/Sequence Editor: fix step values not sent to output/monitor
   * Virtual Console/Slider: fix crash when controlling non existing channels
