--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,12 @@ qlcplus (4.12.5) stable; urgency=low
   * Plugins: save IO lines by name and not by index (where possible)
   * Plugins/DMX USB: add support for COM485-PLUS2 product (thanks to David Turner)
   * Plugins/E1.31: ignore non DMX packets in input
+  * New fixture: Chauvet COLORbar SMD (thanks to Yestalgia)
+  * New fixture: lightmaXX Tour Spot ARC MKII (thanks to Tolmino Muccitelli)
+  * New fixture: Eurolite LED SLS-7 HCL (thanks to René Schulze)
+  * New fixture: Sagitter Slimpar 12DL (thanks to Lorenzo Bicci)
+  * New fixture: Stairville CLB5 Compact LED Bar RGBW / RGBWW (thanks to Dominik Kerner)
+  * New fixture: Briteq BT-Vintage (thanks to David Thomas)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
