--- a/debian/changelog
+++ b/debian/changelog
@@ -19,7 +19,12 @@ qlcplus (4.12.5) stable; urgency=low
   * New fixture: Eurolite LED KLS-120 FX (thanks to Ralf Martin)
   * New fixture: Ibiza PAR LED50-COB (thanks to Clément)
   * New fixture: Ayra ERO 075 (thanks to Jan van Rumph)
-  * New fixtures: Eurolite LED TMH-51, Fun-Generation PicoBeam 60 (thanks to Sebastian Moeckel)
+  * New fixtures: Eurolite LED TMH-51, Eurolite LED TMH FE-1800, Eurolite LED TMH-X5 (thanks to Sebastian Moeckel)
+  * New fixtures: Fun-Generation PicoBeam 60, American DJ Entour Faze (thanks to Sebastian Moeckel)
+  * New fixture: Chauvet Rogue R1 FX-B (thanks to Jean-Daniel Garcia / Barbara Brugger)
+  * New fixture: Chauvet Mini Kinta IRC (thanks to Jason Willett)
+  * New fixture: Stairville MH-x30 LED Spot (thanks to Peeter)
+  * New fixture: Eurolite LED SLS-603 (thanks to Klaus Muth)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
