--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,7 @@ qlcplus (4.12.5) stable; urgency=low
   * New fixture: Eurolite LED SLS-603 (thanks to Klaus Muth)
   * New fixtures: Clay Paky Arolla Spot MP, Arolla Profile MP, Arolla Profile HP (thanks to Gianluca Baggi, Giordano Fassi)
 
- -- Massimo Callegari <maArolla Profile MPssimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
 qlcplus (4.12.4) stable; urgency=low
 
