--- a/debian/changelog
+++ b/debian/changelog
@@ -28,11 +28,16 @@ qlcplus (4.12.5) stable; urgency=low
   * New fixture: Ayra ERO 075 (thanks to Jan van Rumph)
   * New fixtures: Eurolite LED TMH-51, Eurolite LED TMH FE-1800, Eurolite LED TMH-X5 (thanks to Sebastian Moeckel)
   * New fixtures: Fun-Generation PicoBeam 60, American DJ Entour Faze (thanks to Sebastian Moeckel)
+  * New fixtures: Varytec Hero Beam 100, Varytec Hero Spot 230 (thanks to Sebastian Moeckel)
   * New fixture: Chauvet Rogue R1 FX-B (thanks to Jean-Daniel Garcia / Barbara Brugger)
   * New fixture: Chauvet Mini Kinta IRC (thanks to Jason Willett)
   * New fixture: Stairville MH-x30 LED Spot (thanks to Peeter)
-  * New fixture: Eurolite LED SLS-603 (thanks to Klaus Muth)
+  * New fixtures: Eurolite LED SLS-603, QTX Flare-1000 (thanks to Klaus Muth)
   * New fixtures: Clay Paky Arolla Spot MP, Arolla Profile MP, Arolla Profile HP (thanks to Gianluca Baggi, Giordano Fassi)
+  * New fixture: Martin RUSH Par 2 RGBW Zoom (thanks to jeremy-AMMD)
+  * New fixture: UKing Wall Washer 24x3W (thanks to Jürgen Froeschlin)
+  * New fixture: Showtec Par 56 90W COB RGB (thanks to David Gouronc)
+  * New fixture: UKing B55 Par Can 12 LED RGBW 12W (thanks to Nathan Durnan)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
 
