--- a/debian/changelog
+++ b/debian/changelog
@@ -38,8 +38,13 @@ qlcplus (4.12.5) stable; urgency=low
   * New fixture: UKing Wall Washer 24x3W (thanks to Jürgen Froeschlin)
   * New fixture: Showtec Par 56 90W COB RGB (thanks to David Gouronc)
   * New fixture: UKing B55 Par Can 12 LED RGBW 12W (thanks to Nathan Durnan)
+  * New fixture: Rockville Best Strip 60 (thanks to DJ Nikko)
+  * New fixture: Equinox Fusion 50 MkII (thanks to David Dale)
+  * New fixture: Showtec Slidebar 4 (thanks to Arie Roos)
+  * New fixture: Briteq BT-Theatre 50WW (thanks to Fredje Gallon)
+  * New fixture: Showtec Spectral 850 RGBA Tour LED Spot (thanks to Stefan Krumm)
 
- -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jan 2022 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 24 Apr 2022 12:13:14 +0200
 
 qlcplus (4.12.4) stable; urgency=low
 
