--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ qlcplus (4.12.5) stable; urgency=low
   * Plugins/E1.31: fix universe input above 127
   * Plugins/HID: add support for Nodle R4S (thanks to qfulmina)
   * Plugins/HID: fix HID DMX support on Windows (thanks to Daniel Kirschten)
+  * Web Access: automatically reconnect on disconnection (thanks to João Pereira)
   * RGB scripts: added 'Fireworks' script (thanks to Hans-Jürgen Tappe)
   * New fixture: Chauvet COLORbar SMD (thanks to Yestalgia)
   * New fixture: lightmaXX Tour Spot ARC MKII (thanks to Tolmino Muccitelli)
@@ -46,6 +47,7 @@ qlcplus (4.12.5) stable; urgency=low
   * New fixture: Showtec Slidebar 4 (thanks to Arie Roos)
   * New fixture: Briteq BT-Theatre 50WW (thanks to Fredje Gallon)
   * New fixture: Showtec Spectral 850 RGBA Tour LED Spot (thanks to Stefan Krumm)
+  * New fixture: Varytec Hero Spot Wash 80 2in1 RGBW+W, Eurolite LED SLS-18x3W TCL (thanks to Hans-Jürgen Tappe)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 24 Apr 2022 12:13:14 +0200
 
