--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ qlcplus (4.12.5) stable; urgency=low
   * Plugins/E1.31: fix universe input above 127
   * Plugins/HID: add support for Nodle R4S (thanks to qfulmina)
   * Plugins/HID: fix HID DMX support on Windows (thanks to Daniel Kirschten)
+  * Plugins/MIDI: do not send notes twice when in note output mode (thanks to Edgar Aichinger)
   * Web Access: automatically reconnect on disconnection (thanks to João Pereira)
   * RGB scripts: added 'Fireworks' script (thanks to Hans-Jürgen Tappe)
   * New fixture: Chauvet COLORbar SMD (thanks to Yestalgia)
