--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 qlcplus (4.12.6) stable; urgency=low
 
+  * Web Access: fix VC Slider values disappearing on change (thanks to Thierry)
+  * RGB scripts: added 'Circular' script (thanks to Hans-Jürgen Tappe)
+
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 18 Dec 2022 12:13:14 +0200
 
 qlcplus (4.12.5) stable; urgency=low
