--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,13 @@ qlcplus (4.12.6) stable; urgency=low
   * Channel modifiers: added 'S-Curve" modifier (thanks to Giacomo Gorini)
   * New fixture: Cameo F2 T PO (thanks to Hans-Jürgen Tappe)
   * New fixtures: Ibiza PAR LED 710, AFX Spot 60 LED, Ghost Venum 12W RGBW (thanks to erdnaxe)
+  * New fixtures: ETC Source Four LED Series 2 Lustr, Robert Juliat D'Artagnan 934SNX (thanks to Giacomo Gorini)
+  * New fixture: DTS Katana (thanks to Federico)
+  * New fixture: beamZ SB200 Stage Blinder 2x50W (thanks to Tolmino Muccitelli)
+  * New fixture: U'King ZQ-B370 (thanks to Sidde Persson)
+  * New fixture: Equinox Butterfly Quad EQLED100 (thanks to Yestalgia)
+  * New fixture: Varytec Hero Spot 90 (thanks to Chris de Rock)
+  * New fixtures: Eurolite LED H2O Water Effect, Stairville All FX Bar (thanks to Rami Toivola)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 18 Dec 2022 12:13:14 +0200
 
