--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.12.7) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Jan 2023 12:13:14 +0200
+
 qlcplus (4.12.6) stable; urgency=low
 
   * Engine: start Script functions detached (thanks to Thierry)
