--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 qlcplus (4.12.7) stable; urgency=low
 
   * engine: improve audio fade in/out
+  * UI/Monitor: fix 2D view multiple heads not showing correctly
+  * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
   * Web Access: add support for widget background images
   * New fixture: Vari-Lite VL4000 Spot (thanks to Håvard Ose Nordstrand)
   * New fixtures: Clay Paky Tambora Batten, Tambora Flash, Sharpy X Frame (thanks to Gianluca Baggi)
