--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qlcplus (4.12.7) stable; urgency=low
   * UI/Monitor: fix 2D view multiple heads not showing correctly
   * UI/Audio Editor: do not stop audio function if not previewing
   * UI/Fixture Remap: add button to import fixture lists (.qxfl)
+  * UI/Fixture Remap: fix wrong widgets remapping
   * Plugins/OSC: fix broadcast packets reception (thanks to Jannis Achstetter)
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
