--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,15 @@ qlcplus (4.12.7) stable; urgency=low
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
   * Web Access: add support for widget background images
+  * Fixture updated: Blizzard Lighting Pixellicious (thanks to Yestalgia)
   * New fixture: Vari-Lite VL4000 Spot (thanks to Håvard Ose Nordstrand)
   * New fixtures: Clay Paky Tambora Batten, Tambora Flash, Sharpy X Frame (thanks to Gianluca Baggi)
+  * New fixture: beamZ BAC302 (thanks to Matej Lazar)
+  * New fixture: Varytec Giga Bar HEX 3 (thanks to Niklas Larsson)
+  * New fixtures: Equinox Fusion Orbit MKII, QTX PAR-180 (thanks to Wilbur)
+  * New fixture: Cameo ROOT Par 6 (thanks to Florian Faber)
+  * New fixtures: BoomToneDJ Moving Wash 5X15 Speed, lightmaXX Vega Spot 60 (thanks to memrex)
+  * New fixture: Eurolite TSL-150 (thanks to Samuel Mueller)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Jan 2023 12:13:14 +0200
 
