engine: fix crash when no IO plugin is found (fix #1379)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qlcplus (4.12.7) stable; urgency=low
   * engine: improve audio fade in/out
   * engine: consider EFX fade in
   * engine: make sure input/output device names are unique
+  * engine: fix crash when no IO plugin is found
   * UI/Monitor: fix 2D view multiple heads not showing correctly
   * UI/Audio Editor: do not stop audio function if not previewing
   * UI/Fixture Remap: add button to import fixture lists (.qxfl)
