--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qlcplus (4.12.7) stable; urgency=low
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
   * Web Access: add support for widget background images
+  * Input profiles: added ADJ MIDICON-2 (thanks to David Thomas)
   * Fixture updated: Blizzard Lighting Pixellicious (thanks to Yestalgia)
   * New fixture: Vari-Lite VL4000 Spot (thanks to Håvard Ose Nordstrand)
   * New fixtures: Clay Paky Tambora Batten, Tambora Flash, Tambora Linear 100, Sharpy X Frame, Volero Wave (thanks to Gianluca Baggi)
@@ -21,10 +22,17 @@ qlcplus (4.12.7) stable; urgency=low
   * New fixtures: Cameo ROOT Par 6, AFX BARLED200-FX (thanks to Florian Faber)
   * New fixtures: BoomToneDJ Moving Wash 5X15 Speed, lightmaXX Vega Spot 60 (thanks to memrex)
   * New fixture: Eurolite TSL-150 (thanks to Samuel Mueller)
-  * New fixtures: Ayra ALO Micro Scan, Eurolite EDX-4RT, JB Systems MINI-PAR 12RGBW (thanks to Frank Rosquin)
-  * New fixtures: N-Gear Light Spotlight 12 (thanks to Frank Rosquin)
+  * New fixtures: Ayra ALO Micro Scan, Eurolite EDX-4RT, JB Systems MINI-PAR 12RGBW, N-Gear Light Spotlight 12 (thanks to Frank Rosquin)
   * New fixture: Elation E Spot III (thanks to Ludovic Martinez)
   * New fixtures: Chauvet Intimidator Spot 375Z IRC, Eliminator Lighting LP 12 HEX (thanks to Andrew Pavlin)
+  * New fixtures: Chauvet SlimPAR T12BT, Q12ILS and Q12BT (thanks to Andrew Pavlin)
+  * New fixture: Lumeri Eco COB 15 (thanks to Robert Rieks)
+  * New fixture: Martin ERA 400 Performance (thanks to Yestalgia)
+  * New fixtures: Varytec Hero Wash 712 Z RGBW Zoom, Cameo Studio PAR 64 Q 8W (thanks to Anton Luka Šijanec)
+  * New fixture: American DJ Jolt 300 (thanks to David Gouronc)
+  * New fixture: Antari Z-1000 MKII (thanks to Jérôme)
+  * New fixtures: Event Lighting PAR19x12O, PAR6x12OB2, PAR6x12OB (thanks to Michael Tosatto)
+  * New fixture: U'King ZQ-B93 Pinspot RGBW (thanks to Jarosław Biernacki)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Jan 2023 12:13:14 +0200
 
