--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qlcplus (4.12.7) stable; urgency=low
   * Plugins/OSC: fix broadcast packets reception (thanks to Jannis Achstetter)
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
+  * Virtual Console: submaster now affects widgets on all pages but only on active frames
   * Web Access: add support for widget background images
   * Input profiles: added ADJ MIDICON-2 (thanks to David Thomas)
   * Fixture updated: Blizzard Lighting Pixellicious (thanks to Yestalgia)
