--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,7 @@ qlcplus (4.12.7) stable; urgency=low
   * New fixture: U'King ZQ-B93 Pinspot RGBW (thanks to Jarosław Biernacki)
   * New fixtures: Stage Right 200W COB LED Ellipsoidal, Stage Right 30W LED Spot (thanks to Dave Vecchio)
   * New fixture: Rockville Rockwedge LED (thanks to Ryan Carter)
-  * New fixture: Showtec Starforce LED (thanks to gnomesenpai)
+  * New fixtures: Showtec Starforce LED, Equinox Fusion Spot MK III (thanks to gnomesenpai)
   * New fixture: Chauvet SlimPAR Pro Pix (thanks to Ryan Carter)
   * New fixture: DTS Scena LED 200 (thanks to Freddy Hoogstoel)
   * New fixture: Chauvet Intimidator Beam Q60 (thanks to Nathan)
