--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.12.7) stable; urgency=low
 
   * engine: improve audio fade in/out
   * engine: consider EFX fade in
+  * engine: handle LTP channels fade out
   * engine: make sure input/output device names are unique
   * engine: fix crash when no IO plugin is found
   * engine: fix blackout to leave LTP channels untouched
@@ -16,6 +17,7 @@ qlcplus (4.12.7) stable; urgency=low
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
   * Virtual Console: submaster now affects widgets on all pages but only on active frames
   * Web Access: add support for widget background images
+  * Application: fix qxf file association on Windows (if installed as admin)
   * Input profiles: added ADJ MIDICON-2 (thanks to David Thomas)
   * Input profiles: added Akai APC Mini MK2 (thanks to Michael Mertens)
   * Fixture updated: Blizzard Lighting Pixellicious (thanks to Yestalgia)
