--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ qlcplus (4.12.7) stable; urgency=low
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Plugins/MIDI: fix consecutive notes not notified on macOS (thanks to Nils Tijtgat)
   * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
+  * Virtual Console/Animation: include all available presets
   * Virtual Console: submaster now affects widgets on all pages but only on active frames
   * Web Access: add support for widget background images
   * Application: fix qxf file association on Windows (if installed as admin)
