--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ qlcplus (4.12.7) stable; urgency=low
   * New fixture: Betopper LPC007 (thanks to Romil Barticulo)
   * New fixture: Betopper LM108 Wash Moving Head (thanks to Luca Giovannesi)
   * New fixture: Starway Servo Beam 10R (thanks to David Talet)
+  * New fixture: Cameo Zenit B200 (thanks to ikr)
+  * New fixture: Stairville BEL4 - Battery Event Light 4x15W (thanks to Pascal)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 May 2023 12:13:14 +0200
 
