--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qlcplus (4.12.7) stable; urgency=low
   * UI/Fixture Remap: add button to import fixture lists (.qxfl)
   * UI/Fixture Remap: fix wrong widgets remapping
   * UI/Wizard: improved generated function names (thanks to netmindz)
+  * UI: remember state of Function selection dialog
   * Plugins/OSC: fix broadcast packets reception (thanks to Jannis Achstetter)
   * Plugins/E1.31: allow to set 2 digits of the IP address
   * Plugins/MIDI: fix consecutive notes not notified on macOS (thanks to Nils Tijtgat)
