--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.12.8) stable; urgency=low
 
   * Plugins/ArtNet: add default standard transmission mode as per protocol specifications
   * Plugins/DMX USB: add support for DMXKing MAX products
+  * New fixture: Ibiza Mini Moving Star Wash (thanks to Chris Shucksmith)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 17 Dec 2023 12:13:14 +0200
 
